--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,53 +1,29 @@
-name: Publish
+name: Fondness Enigma - Release
 
 on:
-  create:
-    branches:
-      - release/**
-  push:
-    branches:
-    - main
-  pull_request:
-    branches:
-    - main
+  workflow_run:
+    workflows: ["Fondness Enigma - CI"]
+    branches: [ master ]
+    types:
+      - completed
 
 jobs:
-  build:
-
-    env:
-      BUILD_CONFIG: 'Release'
-      SOLUTION: 'Enigma.sln'
-
+  publish-nuget:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-
-    - name: Get Build Version
-      run: |
-        Import-Module .\build\GetBuildVersion.psm1
-        Write-Host $Env:GITHUB_REF
-        $version = GetBuildVersion -VersionString $Env:GITHUB_REF
-        echo "BUILD_VERSION=$version" | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf-8 -Append
-      shell: pwsh
-
-    - name: Setup NuGet
-      uses: NuGet/setup-nuget@v1.0.5
-
-    - name: Restore dependencies
-      run: nuget restore $SOLUTION
-
-    - name: Setup .NET
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 6.x
-
+        dotnet-version: '6.x'
+    - name: Install dependencies
+      run: dotnet restore
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
-
-    - name: Run tests
-      run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal
-
-    - name: Publish
-      if: startsWith(github.ref, 'refs/heads/release')
-      run: nuget push **\*.nupkg -Source 'https://api.nuget.org/v3/index.json' -ApiKey ${{secrets.NUGET}}
+      run: dotnet build --configuration Release --no-restore
+    - name: Publish to NuGet
+      uses: brandedoutcast/publish-nuget@v2
+      with:
+        PROJECT_FILE_PATH: src/Enigma.String/Enigma.String.csproj
+        VERSION_REGEX: '^\s*<PackageVersion>(.*)<\/PackageVersion>\s*$'
+        TAG_FORMAT: '*'
+        NUGET_KEY: ${{secrets.NUGET}}
