--- a/src/Enigma.String/Enigma.String.csproj
+++ b/src/Enigma.String/Enigma.String.csproj
@@ -17,6 +17,7 @@
 		<PackageIcon>binary_icon_211573.png</PackageIcon>
 		<Description>a simple high-performance string encryption and decryption tool based on given symmetric key</Description>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageVersion>1.0.0</PackageVersion>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -36,6 +37,10 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0">
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
 	</ItemGroup>
 
 </Project>
