--- a/src/Enigma.String/Enigma.String.csproj
+++ b/src/Enigma.String/Enigma.String.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net7.0;net6.0;net5.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net7.0;net6.0;net5.0;</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<SignAssembly>True</SignAssembly>
@@ -19,18 +19,13 @@
 		<PackageVersion>1.0.2</PackageVersion>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
 		<PackageLicenseUrl>https://github.com/etammam/enigma/blob/master/LICENSE</PackageLicenseUrl>
-		<LangVersion>Latest</LangVersion>
+		<LangVersion>12</LangVersion>
+		<IsPackable>true</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="..\..\.assets\binary_icon_211573.png">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
-		<None Include="..\..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
+		<None Include="..\..\.assets\binary_icon_211573.png" Pack="true" Visible="false" PackagePath=""/>
+		<None Include="..\..\README.md" Pack="true" Visible="false" PackagePath=""/>
 	</ItemGroup>
 
 	<ItemGroup>
