add workflow_dispatch attribute to ci action file.

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,11 @@ name: Fondness Enigma - CI
 
 on:
   push:
-    branches: *
+    branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+
 
 jobs:
   build:
